[gd_scene load_steps=2 format=3 uid="uid://bgc2wr5d4r54m"]

[ext_resource type="Script" uid="uid://cffa3j546tolh" path="res://client/scripts/ui/game_ui.gd" id="1_gwk6t"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gwk6t")

[node name="WeaponInfo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="WeaponName" type="Label" parent="WeaponInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="AmmoCount" type="Label" parent="WeaponInfo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
vertical_alignment = 1

[node name="GameInfo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="Timer" type="Label" parent="GameInfo"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2

[node name="Score" type="Label" parent="GameInfo"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2

[node name="ObjectiveInfo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ObjectiveText" type="Label" parent="ObjectiveInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Crosshair" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HLine" type="ColorRect" parent="Crosshair"]
layout_mode = 0
offset_right = 2.0
offset_bottom = 20.0

[node name="VLine" type="ColorRect" parent="Crosshair"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 2.0

[node name="RoundStatePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RoundState" type="Label" parent="RoundStatePanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
